Update project code links

--- a/index.html
+++ b/index.html
@@ -59,11 +59,11 @@
             <div class="col-12">
                 <img src="images/headshot_sam_legros_round.png" alt="headshot of Sam Legros" class="img-round rounded">
             </div>
-            <div class="col-12 col-sm-10 offset-sm-1 col-md-6 offset-md-0 color-text-grey text-left">
+            <div class="col-12 col-sm-10 offset-sm-1 col-md-6 offset-md-0 color-text-grey text-left" style="padding-bottom: 25px;">
                 <p class="font-weight-bold">Hi, I'm Sam and I'm a web developer <span class="text-emoji align-middle">👨🏻‍💻</span></p>
                 <p>I'm a natural problem solver who is not afraid of a challenge and believe that being able to have fun on the job makes any project&nbsp;possible.</p>
                 <p>I'm a "big picture"​ thinker who is able to visualize problems before they happen, leading to balanced, complete, and responsive projects in inclusive design and web development. Web development is my specialty, but working with people, for people is what I do&nbsp;best.</p>
-                <div class="col-12 text-center text-md-left" style="padding: 25px 0px;">
+                <div class="pt-2 col-12 text-center text-md-left pl-md-0">
                     <a href="https://www.linkedin.com/in/samlegros/" target="_blank"><button type="button" value="Go to Sam Legros' LinkedIn page" class="btn"><span class="button-text">VIEW MY LINKEDIN</span></button></a>
                 </div>
             </div>
@@ -248,7 +248,7 @@
                             <a href="https://codepen.io/SamLegros/full/mMbzLo" target="_blank"><button class="btn"><span class="button-text">SEE LIVE</span></button></a>
                         </div>
                         <div class="col-8 offset-2 col-sm-6 offset-sm-0">
-                            <a href="#" target="_blank"><button class="btn btn-alt"><span class="button-text">VIEW CODE</span></button></a>
+                            <a href="https://github.com/SamLegros/javascript-calculator" target="_blank"><button class="btn btn-alt"><span class="button-text">VIEW CODE</span></button></a>
                         </div>
                     </div>
                 </div>
@@ -293,7 +293,7 @@
                             <a href="https://codepen.io/SamLegros/full/rwjaRq" target="_blank"><button class="btn"><span class="button-text">SEE LIVE</span></button></a>
                         </div>
                         <div class="col-8 offset-2 col-sm-6 offset-sm-0">
-                            <a href="#" target="_blank"><button class="btn btn-alt"><span class="button-text">VIEW CODE</span></button></a>
+                            <a href="https://github.com/SamLegros/local-weather" target="_blank"><button class="btn btn-alt"><span class="button-text">VIEW CODE</span></button></a>
                         </div>
                     </div>
                 </div>
@@ -317,7 +317,7 @@
                             <a href="https://codepen.io/SamLegros/full/prJeyW" target="_blank"><button class="btn"><span class="button-text">SEE LIVE</span></button></a>
                         </div>
                         <div class="col-8 offset-2 col-sm-6 offset-sm-0">
-                            <a href="#" target="_blank"><button class="btn btn-alt"><span class="button-text">VIEW CODE</span></button></a>
+                            <a href="https://github.com/SamLegros/pomodoro-clock" target="_blank"><button class="btn btn-alt"><span class="button-text">VIEW CODE</span></button></a>
                         </div>
                     </div>
                 </div>
@@ -338,7 +338,7 @@
                             <a href="https://codepen.io/SamLegros/full/yRBdMO" target="_blank"><button class="btn"><span class="button-text">SEE LIVE</span></button></a>
                         </div>
                         <div class="col-8 offset-2 col-sm-6 offset-sm-0">
-                            <a href="#" target="_blank"><button class="btn btn-alt"><span class="button-text">VIEW CODE</span></button></a>
+                            <a href="https://github.com/SamLegros/build-a-product-landing-page" target="_blank"><button class="btn btn-alt"><span class="button-text">VIEW CODE</span></button></a>
                         </div>
                     </div>
                 </div>
@@ -363,7 +363,7 @@
                             <a href="https://codepen.io/SamLegros/full/KqNVvZ" target="_blank"><button class="btn"><span class="button-text">SEE LIVE</span></button></a>
                         </div>
                         <div class="col-8 offset-2 col-sm-6 offset-sm-0">
-                            <a href="#" target="_blank"><button class="btn btn-alt"><span class="button-text">VIEW CODE</span></button></a>
+                            <a href="https://github.com/SamLegros/random-quote-machine" target="_blank"><button class="btn btn-alt"><span class="button-text">VIEW CODE</span></button></a>
                         </div>
                     </div>
                 </div>
@@ -387,7 +387,7 @@
                             <a href="https://codepen.io/SamLegros/full/WEQWaj" target="_blank"><button class="btn"><span class="button-text">SEE LIVE</span></button></a>
                         </div>
                         <div class="col-8 offset-2 col-sm-6 offset-sm-0">
-                            <a href="#" target="_blank"><button class="btn btn-alt"><span class="button-text">VIEW CODE</span></button></a>
+                            <a href="https://github.com/SamLegros/sam-says" target="_blank"><button class="btn btn-alt"><span class="button-text">VIEW CODE</span></button></a>
                         </div>
                     </div>
                 </div>
@@ -408,7 +408,7 @@
                             <a href="https://codepen.io/SamLegros/full/yRLRyq" target="_blank"><button class="btn"><span class="button-text">SEE LIVE</span></button></a>
                         </div>
                         <div class="col-8 offset-2 col-sm-6 offset-sm-0">
-                            <a href="#" target="_blank"><button class="btn btn-alt"><span class="button-text">VIEW CODE</span></button></a>
+                            <a href="https://github.com/SamLegros/build-a-technical-documentation-page" target="_blank"><button class="btn btn-alt"><span class="button-text">VIEW CODE</span></button></a>
                         </div>
                     </div>
                 </div>
@@ -432,7 +432,7 @@
                             <a href="https://codepen.io/SamLegros/full/LjpVYE" target="_blank"><button class="btn"><span class="button-text">SEE LIVE</span></button></a>
                         </div>
                         <div class="col-8 offset-2 col-sm-6 offset-sm-0">
-                            <a href="#" target="_blank"><button class="btn btn-alt"><span class="button-text">VIEW CODE</span></button></a>
+                            <a href="https://github.com/SamLegros/tic-tac-toe" target="_blank"><button class="btn btn-alt"><span class="button-text">VIEW CODE</span></button></a>
                         </div>
                     </div>
                 </div>
@@ -457,7 +457,7 @@
                             <a href="https://codepen.io/SamLegros/full/owdYOL" target="_blank"><button class="btn"><span class="button-text">SEE LIVE</span></button></a>
                         </div>
                         <div class="col-8 offset-2 col-sm-6 offset-sm-0">
-                            <a href="#" target="_blank"><button class="btn btn-alt"><span class="button-text">VIEW CODE</span></button></a>
+                            <a href="https://github.com/SamLegros/twitch-streamer-status" target="_blank"><button class="btn btn-alt"><span class="button-text">VIEW CODE</span></button></a>
                         </div>
                     </div>
                 </div>
@@ -482,7 +482,7 @@
                             <a href="https://codepen.io/SamLegros/full/KqQwbe" target="_blank"><button class="btn"><span class="button-text">SEE LIVE</span></button></a>
                         </div>
                         <div class="col-8 offset-2 col-sm-6 offset-sm-0">
-                            <a href="#" target="_blank"><button class="btn btn-alt"><span class="button-text">VIEW CODE</span></button></a>
+                            <a href="https://github.com/SamLegros/wikipedia-viewer" target="_blank"><button class="btn btn-alt"><span class="button-text">VIEW CODE</span></button></a>
                         </div>
                     </div>
                 </div>
