Add title elements to font awesome icons

--- a/index.html
+++ b/index.html
@@ -71,8 +71,8 @@
             </div>
             <div class="col-12 col-sm-10 offset-sm-1 col-md-6 offset-md-0 color-text-grey text-left">
                 <p tabindex="0">I believe in working towards greater digital access for all, the passion and dedication of small teams, the unlimited potential of technology, and the power of a good night's&nbsp;sleep.</p>
-                <p tabindex="0">I'm a recent <a href="https://www.ryerson.ca/graduate/digitalmedia/" target="_blank" rel="noopener" class="site-link" title="Link to Ryerson University's Master of Digital Media website">Master of Digital Media <i class="fas fa-external-link-alt"></i></a> grad, specializing in accessibility in web development and have a BFA in <a href="https://ryersonrta.ca/programs/bfa-new-media" target="_blank" rel="noopener" class="site-link"title="Link to Ryerson University's New Media website">New Media <i class="fas fa-external-link-alt"></i></a> from Ryerson&nbsp;University.</p>
-                <p tabindex="0">When I'm not working, you can find me cooking, <a href="https://www.goodreads.com/user/show/46470866-sam-legros" target="_blank" rel="noopener" class="site-link" title="Link to Sam Legros' Goodreads page">reading <i class="fas fa-external-link-alt"></i></a>, and playing games (HotS, Destiny 2, or Horizon: Zero Dawn ← definitely recommend), usually in that&nbsp;order.</p>
+                <p tabindex="0">I'm a recent <a href="https://www.ryerson.ca/graduate/digitalmedia/" target="_blank" rel="noopener" class="site-link" title="Link to Ryerson University's Master of Digital Media website">Master of Digital Media <i class="fas fa-external-link-alt" title="external link icon"></i></a> grad, specializing in accessibility in web development and have a BFA in <a href="https://ryersonrta.ca/programs/bfa-new-media" target="_blank" rel="noopener" class="site-link"title="Link to Ryerson University's New Media website">New Media <i class="fas fa-external-link-alt" title="external link icon"></i></a> from Ryerson&nbsp;University.</p>
+                <p tabindex="0">When I'm not working, you can find me cooking, <a href="https://www.goodreads.com/user/show/46470866-sam-legros" target="_blank" rel="noopener" class="site-link" title="Link to Sam Legros' Goodreads page">reading <i class="fas fa-external-link-alt" title="external link icon"></i></a>, and playing games (HotS, Destiny 2, or Horizon: Zero Dawn ← definitely recommend), usually in that&nbsp;order.</p>
                 <div class="row">
                 </div>
             </div>
@@ -90,7 +90,7 @@
                         <tr>
                             <td class="align-middle"><a href="https://aws.amazon.com/" target="_blank" rel="noopener">
                                 <p>
-                                    <i class="devicon-amazonwebservices-original"></i><br class="toolbox-text-spacer">
+                                    <i class="devicon-amazonwebservices-original" title="amazon web services icon"></i><br class="toolbox-text-spacer">
                                     AWS
                                 </p>
                             </a></td>
@@ -102,7 +102,7 @@
                         <tr>
                             <td class="align-middle"><a href="https://getbootstrap.com/" target="_blank" rel="noopener">
                                 <p>
-                                    <i class="devicon-bootstrap-plain"></i><br class="toolbox-text-spacer">
+                                    <i class="devicon-bootstrap-plain" title="bootstrap icon"></i><br class="toolbox-text-spacer">
                                     Bootstrap
                                 </p>
                             </a></td>
@@ -114,7 +114,7 @@
                         <tr>
                             <td class="align-middle"><a href="https://developer.mozilla.org/en-US/docs/Web/CSS/CSS3" target="_blank" rel="noopener">
                                 <p>
-                                    <i class="devicon-css3-plain"></i><br class="toolbox-text-spacer">
+                                    <i class="devicon-css3-plain" title="css3 icon"></i><br class="toolbox-text-spacer">
                                     CSS3
                                 </p>
                             </a></td>
@@ -126,7 +126,7 @@
                         <tr>
                             <td class="align-middle"><a href="https://git-scm.com/" target="_blank" rel="noopener">
                                 <p>
-                                    <i class="devicon-git-plain"></i><br class="toolbox-text-spacer">
+                                    <i class="devicon-git-plain" title="git icon"></i><br class="toolbox-text-spacer">
                                     Git
                                 </p>
                             </a></td>
@@ -138,7 +138,7 @@
                         <tr>
                             <td class="align-middle"><a href="https://github.com/" target="_blank" rel="noopener">
                                 <p>
-                                    <i class="devicon-github-plain"></i><br class="toolbox-text-spacer">
+                                    <i class="devicon-github-plain" title="github icon"></i><br class="toolbox-text-spacer">
                                     GitHub
                                 </p>
                             </a></td>
@@ -150,7 +150,7 @@
                         <tr>
                             <td class="align-middle"><a href="https://developer.mozilla.org/en-US/docs/Web/Guide/HTML/HTML5" target="_blank" rel="noopener">
                                 <p>
-                                    <i class="devicon-html5-plain"></i><br class="toolbox-text-spacer">
+                                    <i class="devicon-html5-plain" title="html5 icon"></i><br class="toolbox-text-spacer">
                                     HTML5
                                 </p>
                             </a></td>
@@ -162,7 +162,7 @@
                         <tr>
                             <td class="align-middle"><a href="https://developer.mozilla.org/en-US/docs/Web/JavaScript" target="_blank" rel="noopener">
                                 <p>
-                                    <i class="devicon-javascript-plain"></i><br class="toolbox-text-spacer">
+                                    <i class="devicon-javascript-plain" title="javascript icon"></i><br class="toolbox-text-spacer">
                                     JavaScript
                                 </p>
                             </a></td>
@@ -174,7 +174,7 @@
                         <tr>
                             <td class="align-middle"><a href="https://jquery.com/" target="_blank" rel="noopener">
                                 <p>
-                                    <i class="devicon-jquery-plain"></i><br class="toolbox-text-spacer">
+                                    <i class="devicon-jquery-plain" title="jquery icon"></i><br class="toolbox-text-spacer">
                                     jQuery
                                 </p>
                             </a></td>
@@ -186,7 +186,7 @@
                         <tr>
                             <td class="align-middle"><a href="https://www.mysql.com/" target="_blank" rel="noopener">
                                 <p>
-                                    <i class="devicon-mysql-plain"></i><br class="toolbox-text-spacer">
+                                    <i class="devicon-mysql-plain" title="mysql icon"></i><br class="toolbox-text-spacer">
                                     mySQL
                                 </p>
                             </a></td>
@@ -198,7 +198,7 @@
                         <tr>
                             <td class="align-middle"><a href="http://www.php.net/" target="_blank" rel="noopener">
                                 <p>
-                                    <i class="devicon-php-plain"></i><br class="toolbox-text-spacer">
+                                    <i class="devicon-php-plain" title="php icon"></i><br class="toolbox-text-spacer">
                                     PHP
                                 </p>
                             </a></td>
@@ -496,17 +496,17 @@
         <p tabindex="0" class="color-text-grey">There are many ways we can get in touch&nbsp;<span class="text-emoji align-middle">👋</span></p>
 
         <div id="contact-icons-container">
-            <a tabindex="0" href="https://github.com/samlegros" target="_blank" rel="noopener" title="Link to Sam Legros' GitHub page"><i class="fab fa-github-square"></i></a>
-            <a tabindex="0" href="https://www.linkedin.com/in/samlegros/" target="_blank" rel="noopener" title="Link to Sam Legros' LinkedIn page"><i class="fab fa-linkedin"></i></a>
-            <a tabindex="0" href="https://twitter.com/SamLegros" target="_blank" rel="noopener" title="Link to Sam Legros' Twitter page"><i class="fab fa-twitter-square"></i></a>
-            <a tabindex="0" href="mailto:email@samlegros.com?subject=Awesome%20Website!" target="_blank" rel="noopener" title="This link will open your email client to send an email to Sam Legros"><i class="fas fa-envelope-square"></i></a>
-            <a tabindex="0" href="tel:+16472299122" target="_blank" rel="noopener" title="This link will open your phone client to call Sam Legros"><i class="fas fa-phone-square"></i></a>
+            <a tabindex="0" href="https://github.com/samlegros" target="_blank" rel="noopener" title="Link to Sam Legros' GitHub page"><i class="fab fa-github-square" title="github icon"></i></a>
+            <a tabindex="0" href="https://www.linkedin.com/in/samlegros/" target="_blank" rel="noopener" title="Link to Sam Legros' LinkedIn page"><i class="fab fa-linkedin" title="linkedin icon"></i></a>
+            <a tabindex="0" href="https://twitter.com/SamLegros" target="_blank" rel="noopener" title="Link to Sam Legros' Twitter page"><i class="fab fa-twitter-square" title="twitter icon"></i></a>
+            <a tabindex="0" href="mailto:email@samlegros.com?subject=Awesome%20Website!" target="_blank" rel="noopener" title="This link will open your email client to send an email to Sam Legros"><i class="fas fa-envelope-square" title="email icon"></i></a>
+            <a tabindex="0" href="tel:+16472299122" target="_blank" rel="noopener" title="This link will open your phone client to call Sam Legros"><i class="fas fa-phone-square" title="phone icon"></i></a>
         </div>
     </section>
     <footer>
         <p tabindex="0">Website made with <i class="fas fa-heart" title="love"></i> by Sam Legros in&nbsp;2018</p>
     </footer>
-    <a tabindex="0" data-scroll href="#section-home" title="Navigate back to top of page"><button tabindex="-1" class="btn" id="back-to-top-button" title="Navigate back to top of page"><i class="fas fa-arrow-up"></i></button></a>
+    <a tabindex="0" data-scroll href="#section-home" title="Navigate back to top of page"><button tabindex="-1" class="btn" id="back-to-top-button" title="Navigate back to top of page"><i class="fas fa-arrow-up" title="up arrow icon"></i></button></a>
     <!-- cdn jQuery 3.3.1 slim -->
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
     <!-- cdn Popper.js 1.14.3 -->
