Add Google Analytics tracking code
- Begin resize text settings, but leave commented out for time being

--- a/index.html
+++ b/index.html
@@ -1,6 +1,14 @@
 <!doctype html>
 <html lang="en">
 <head>
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-88429785-4"></script>
+    <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
+    gtag('config', 'UA-88429785-4');
+    </script>
     <meta charset="utf-8">
     <meta name="Description" content="The portfolio website of Sam Legros.">
     <link rel="manifest" href="manifest.json">
@@ -505,6 +513,10 @@
     </section>
     <footer>
         <p tabindex="0">Website made with <i class="fas fa-heart" title="love"></i> by Sam Legros in&nbsp;2018</p>
+        <!-- <p id="change-font-size">
+            Resize Text<br>
+            <span><i class="fas fa-plus-square" title="increase font size"></i></span> <i class="fas fa-minus-square" title="decrease font size"></i>
+        </p> -->
     </footer>
     <a tabindex="0" data-scroll href="#section-home" title="Navigate back to top of page"><button tabindex="-1" class="btn" id="back-to-top-button" title="Navigate back to top of page"><i class="fas fa-arrow-up" title="up arrow icon"></i></button></a>
     <!-- cdn jQuery 3.3.1 slim -->
