--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html lang="en">
 <head>
-    <!-- Global site tag (gtag.js) - Google Analytics -->
+    <!-- Global site tag (gtag.js) - Google Analytics [script added: 2018-10-25] -->
     <script async src="https://www.googletagmanager.com/gtag/js?id=UA-88429785-4"></script>
     <script>
     window.dataLayer = window.dataLayer || [];
