Begin font size changing setting
- Fix header nesting issue (h5's to proper h3's)

--- a/index.html
+++ b/index.html
@@ -46,6 +46,9 @@
                     <li class="nav-item">
                         <a data-scroll class="nav-link" href="#section-social">Social</a>
                     </li>
+                    <li class="nav-item">
+                        <a data-scroll class="nav-link" href="#section-settings">Settings</a>
+                    </li>
                 </ul>
                 <span class="navbar-text">
                     <a href="mailto:email@samlegros.com?subject=Awesome%20Website!" title="This link will open your email client to send an email to Sam Legros"><button tabindex="-1" class="btn"><span class="button-text">CONTACT</span></button></a>
@@ -223,7 +226,7 @@
             <div tabindex="0" class="card"><!-- Build for All -->
                 <img class="card-img-top" src="images/portfolio_build_for_all.png" alt="Graphic of two people working together">
                 <div class="card-body">
-                    <h5 class="card-title">Build for All</h5>
+                    <h3 class="card-title">Build for All</h3>
                     <p class="card-text">Providing startups with accessible and inclusive resources</p>
                     <p class="font-family-text portfolio-item-tools">
                         <span class="badge badge-primary">Bootstrap</span>
@@ -242,7 +245,7 @@
             <div tabindex="0" class="card"><!-- JavaScript Calculator -->
                 <img class="card-img-top" src="images/portfolio_javascript_calculator.png" alt="Screenshot of javascript calculator page">
                 <div class="card-body">
-                    <h5 class="card-title">JavaScript Calculator</h5>
+                    <h3 class="card-title">JavaScript Calculator</h3>
                     <p class="card-text">Perfect when your pocket calculator runs out of battery</p>
                     <p class="font-family-text portfolio-item-tools">
                         <span class="badge badge-primary">Bootstrap</span>
@@ -266,7 +269,7 @@
             <div tabindex="0" class="card"><!-- MenuVox -->
                 <img class="card-img-top" src="images/portfolio_menuvox.png" alt="Restaurant table with glass of water, menu, smart phone, and sun glasses on it.">
                 <div class="card-body">
-                    <h5 class="card-title">MenuVox</h5>
+                    <h3 class="card-title">MenuVox</h3>
                     <p class="card-text">Restaurant menus made accessible</p>
                     <p class="font-family-text portfolio-item-tools">
                         <span class="badge badge-primary">Bootstrap</span>
@@ -286,7 +289,7 @@
             <div tabindex="0" class="card"><!-- Local Weather -->
                 <img class="card-img-top" src="images/portfolio_local_weather.png" alt="Screenshot of local weather page">
                 <div class="card-body">
-                    <h5 class="card-title">Local Weather</h5>
+                    <h3 class="card-title">Local Weather</h3>
                     <p class="card-text">Your local weather at a glance</p>
                     <p class="font-family-text portfolio-item-tools">
                         <span class="badge badge-primary">Bootstrap</span>
@@ -311,7 +314,7 @@
             <div tabindex="0" class="card"><!-- Pomodoro Clock -->
                 <img class="card-img-top" src="images/portfolio_pomodoro_clock.png" alt="Screenshot of pomodoro clock page">
                 <div class="card-body">
-                    <h5 class="card-title">Pomodoro Clock</h5>
+                    <h3 class="card-title">Pomodoro Clock</h3>
                     <p class="card-text">Helping you stay productive</p>
                     <p class="font-family-text portfolio-item-tools">
                         <span class="badge badge-primary">Bootstrap</span>
@@ -335,7 +338,7 @@
             <div tabindex="0" class="card"><!-- Product Landing Page -->
                 <img class="card-img-top" src="images/portfolio_product_landing_page.png" alt="Oddball logo.">
                 <div class="card-body">
-                    <h5 class="card-title">Product Landing Page</h5>
+                    <h3 class="card-title">Product Landing Page</h3>
                     <p class="card-text">Landing page tribute to the Oddball</p>
                     <p class="font-family-text portfolio-item-tools">
                         <span class="badge badge-secondary">CSS3</span>
@@ -356,7 +359,7 @@
             <div tabindex="0" class="card"><!-- Random Quote Machine -->
                 <img class="card-img-top" src="images/portfolio_random_quote_machine.png" alt="Screenshot of random quote machine page">
                 <div class="card-body">
-                    <h5 class="card-title">Random Quote Machine</h5>
+                    <h3 class="card-title">Random Quote Machine</h3>
                     <p class="card-text">Generate beautiful quotes, and you can tweet them too</p>
                     <p class="font-family-text portfolio-item-tools">
                         <span class="badge badge-primary">Bootstrap</span>
@@ -381,7 +384,7 @@
             <div tabindex="0" class="card"><!-- Sam Says -->
                 <img class="card-img-top" src="images/portfolio_sam_says.png" alt="Screenshot of sam says (similar to simon says) page">
                 <div class="card-body">
-                    <h5 class="card-title">Sam Says</h5>
+                    <h3 class="card-title">Sam Says</h3>
                     <p class="card-text">Sam says to play this game</p>
                     <p class="font-family-text portfolio-item-tools">
                         <span class="badge badge-primary">Bootstrap</span>
@@ -405,7 +408,7 @@
             <div tabindex="0" class="card"><!-- Technical Documentation Page -->
                 <img class="card-img-top" src="images/portfolio_technical_documentation_page.png" alt="Screenshot of technical web api documentation page">
                 <div class="card-body">
-                    <h5 class="card-title">Technical Documentation Page</h5>
+                    <h3 class="card-title">Technical Documentation Page</h3>
                     <p class="card-text">Slack theme inspired API documentation page</p>
                     <p class="font-family-text portfolio-item-tools">
                         <span class="badge badge-secondary">CSS3</span>
@@ -426,7 +429,7 @@
             <div tabindex="0" class="card"><!-- Tic Tac Toe -->
                 <img class="card-img-top" src="images/portfolio_tic_tac_toe.png" alt="Screenshot of tic tac toe page">
                 <div class="card-body">
-                    <h5 class="card-title">Tic Tac Toe</h5>
+                    <h3 class="card-title">Tic Tac Toe</h3>
                     <p class="card-text">Can you defeat the computer?</p>
                     <p class="font-family-text portfolio-item-tools">
                         <span class="badge badge-primary">Bootstrap</span>
@@ -450,7 +453,7 @@
             <div tabindex="0" class="card"><!-- Twitch.tv Streamer Status -->
                 <img class="card-img-top" src="images/portfolio_twitch_streamer_status.png" alt="Screenshot of twitch page">
                 <div class="card-body">
-                    <h5 class="card-title">Twitch.tv Streamer Status</h5>
+                    <h3 class="card-title">Twitch.tv Streamer Status</h3>
                     <p class="card-text">A dashboard for Twitch.tv streamers</p>
                     <p class="font-family-text portfolio-item-tools">
                         <span class="badge badge-primary">Bootstrap</span>
@@ -475,7 +478,7 @@
             <div tabindex="0" class="card"><!-- Wikipedia Viewer -->
                 <img class="card-img-top" src="images/portfolio_wikipedia_viewer.png" alt="Screenshot of wikipedia viewer page">
                 <div class="card-body">
-                    <h5 class="card-title">Wikipedia Viewer</h5>
+                    <h3 class="card-title">Wikipedia Viewer</h3>
                     <p class="card-text">A minimal wikipedia search tool</p>
                     <p class="font-family-text portfolio-item-tools">
                         <span class="badge badge-primary">Bootstrap</span>
@@ -511,12 +514,19 @@
             <a tabindex="0" href="tel:+16472299122" target="_blank" rel="noopener" title="This link will open your phone client to call Sam Legros"><i class="fas fa-phone-square" title="phone icon"></i></a>
         </div>
     </section>
+    <section id="section-settings">
+        <h2 tabindex="0">Make this site your own</h2>
+        <p tabindex="0">
+            Resize Text<br>
+        </p>
+        <div>
+            <button class="btn" type="button" name="font size 100%" title="resize font to 100%">100%</button>
+            <button class="btn" type="button" name="font size 150%" title="resize font to 150%">150%</button>
+            <button class="btn" type="button" name="font size 200%" title="resize font to 200%">200%</button>
+        </div>
+    </section>
     <footer>
         <p tabindex="0">Website made with <i class="fas fa-heart" title="love"></i> by Sam Legros in&nbsp;2018</p>
-        <!-- <p id="change-font-size">
-            Resize Text<br>
-            <span><i class="fas fa-plus-square" title="increase font size"></i></span> <i class="fas fa-minus-square" title="decrease font size"></i>
-        </p> -->
     </footer>
     <a tabindex="0" data-scroll href="#section-home" title="Navigate back to top of page"><button tabindex="-1" class="btn" id="back-to-top-button" title="Navigate back to top of page"><i class="fas fa-arrow-up" title="up arrow icon"></i></button></a>
     <!-- cdn jQuery 3.3.1 slim -->
@@ -532,6 +542,6 @@
     <!-- local JavaScript -->
     <script src="scripts/script.js"></script>
     <!-- local LiveReload -->
-    <!-- <script>document.write('<script src="http://' + (location.host || 'localhost').split(':')[0] + ':35729/livereload.js?snipver=1"></' + 'script>')</script> -->
+    <script>document.write('<script src="http://' + (location.host || 'localhost').split(':')[0] + ':35729/livereload.js?snipver=1"></' + 'script>')</script>
 </body>
 </html>
