Fix change font size
- Add calendar event navbar brand icon and colour
- Fix LinkedIn button spacing
- Add WCAG 2.0 AA compliance badge

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 <body>
     <section id="section-home">
         <nav class="navbar navbar-expand-md navbar-light">
-            <a class="navbar-brand font-weight-bold" href="https://www.samsverko.com">Sam Legros</a>
+            <a class="navbar-brand font-weight-bold color-calendar-event" href="https://www.samsverko.com"><i class="fas fa-ghost"></i> Sam Legros</a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarText" aria-controls="navbarText" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
@@ -76,7 +76,7 @@
                 <p tabindex="0" class="font-weight-bold">Hi, I'm Sam and I'm a web developer <span class="text-emoji align-middle">👨🏻‍💻</span></p>
                 <p tabindex="0">I'm a natural problem solver who is not afraid of a challenge and believe that being able to have fun on the job makes any project&nbsp;possible.</p>
                 <p tabindex="0">I'm a "big picture"​ thinker who is able to visualize problems before they happen, leading to balanced, complete, and responsive projects in inclusive design and web development. Web development is my specialty, but working with people, for people is what I do&nbsp;best.</p>
-                <div class="pt-2 col-12 text-center text-md-left pl-md-0">
+                <div class="p-0 pt-2 col-12 text-center text-md-left pl-md-0">
                     <a tabindex="0" href="https://www.linkedin.com/in/samlegros/" target="_blank" rel="noopener" title="Link to Sam Legros' LinkedIn page"><button tabindex="-1" type="button" value="Go to Sam Legros' LinkedIn page" class="btn"><span class="button-text">VIEW MY LINKEDIN</span></button></a>
                 </div>
             </div>
@@ -527,6 +527,7 @@
     </section>
     <footer>
         <p tabindex="0">Website made with <i class="fas fa-heart" title="love"></i> by Sam Legros in&nbsp;2018</p>
+        <a href="https://www.w3.org/WAI/WCAG2AA-Conformance" target="_blank" rel="noopener" title="Explanation of WCAG 2.0 Level Double-A Conformance"><img height="32" width="88" src="https://www.w3.org/WAI/wcag2AA-blue" alt="Level Double-A conformance, W3C WAI Web Content Accessibility Guidelines 2.0"></a>
     </footer>
     <a tabindex="0" data-scroll href="#section-home" title="Navigate back to top of page"><button tabindex="-1" class="btn" id="back-to-top-button" title="Navigate back to top of page"><i class="fas fa-arrow-up" title="up arrow icon"></i></button></a>
     <!-- cdn jQuery 3.3.1 slim -->
