Add title description to navbar brand icon

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 <body>
     <section id="section-home">
         <nav class="navbar navbar-expand-md navbar-light">
-            <a class="navbar-brand font-weight-bold color-calendar-event" href="https://www.samsverko.com"><i class="fas fa-ghost"></i> Sam Legros</a>
+            <a class="navbar-brand font-weight-bold color-calendar-event" href="https://www.samsverko.com"><i class="fas fa-ghost" title="spooky ghost icon"></i> Sam Legros</a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarText" aria-controls="navbarText" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
