Disable LiveReload script

--- a/index.html
+++ b/index.html
@@ -543,6 +543,6 @@
     <!-- local JavaScript -->
     <script src="scripts/script.js"></script>
     <!-- local LiveReload -->
-    <script>document.write('<script src="http://' + (location.host || 'localhost').split(':')[0] + ':35729/livereload.js?snipver=1"></' + 'script>')</script>
+    <!-- <script>document.write('<script src="http://' + (location.host || 'localhost').split(':')[0] + ':35729/livereload.js?snipver=1"></' + 'script>')</script> -->
 </body>
 </html>
