Optimize image file sizes

--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
         <h2 tabindex="0">A little bit about&nbsp;me</h2>
         <div class="row">
             <div class="col-12">
-                <img tabindex="0" src="images/headshot_sam_legros_round.png" alt="headshot of Sam Legros" class="img-round rounded">
+                <img tabindex="0" src="images/headshot_sam_legros_round.jpg" alt="headshot of Sam Legros" class="img-round rounded">
             </div>
             <div class="col-12 col-sm-10 offset-sm-1 col-md-6 offset-md-0 color-text-grey text-left" style="padding-bottom: 25px;">
                 <p tabindex="0" class="font-weight-bold">Hi, I'm Sam and I'm a web developer <span class="text-emoji align-middle">👨🏻‍💻</span></p>
@@ -267,7 +267,7 @@
                 </div>
             </div>
             <div tabindex="0" class="card"><!-- MenuVox -->
-                <img class="card-img-top" src="images/portfolio_menuvox.png" alt="Restaurant table with glass of water, menu, smart phone, and sun glasses on it.">
+                <img class="card-img-top" src="images/portfolio_menuvox.jpg" alt="Restaurant table with glass of water, menu, smart phone, and sun glasses on it.">
                 <div class="card-body">
                     <h3 class="card-title">MenuVox</h3>
                     <p class="card-text">Restaurant menus made accessible</p>
@@ -287,7 +287,7 @@
                 </div>
             </div>
             <div tabindex="0" class="card"><!-- Local Weather -->
-                <img class="card-img-top" src="images/portfolio_local_weather.png" alt="Screenshot of local weather page">
+                <img class="card-img-top" src="images/portfolio_local_weather.jpg" alt="Screenshot of local weather page">
                 <div class="card-body">
                     <h3 class="card-title">Local Weather</h3>
                     <p class="card-text">Your local weather at a glance</p>
