--- a/index.html
+++ b/index.html
@@ -15,11 +15,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <!-- online Google Font: Montserrat -->
     <link href="https://fonts.googleapis.com/css?family=Montserrat:700" rel="stylesheet">
-    <!-- cdn Bootstrap 4.1.3 CSS -->
+    <!-- cdn Bootstrap CSS 4.1.3 -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
     <!-- cdn Devicon CSS -->
     <link rel="stylesheet" href="https://cdn.rawgit.com/konpa/devicon/df6431e323547add1b4cf45992913f15286456d3/devicon.min.css">
-    <!-- online Font Awesome 5.4.1 -->
+    <!-- online Font Awesome CSS 5.4.1 -->
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.4.1/css/all.css" integrity="sha384-5sAR7xN1Nv6T6+dT2mhtzEpVJvfS3NScPQTrOxhwjIuvcA67KV2R5Jz6kr4abQsz" crossorigin="anonymous">
     <!-- local CSS -->
     <link rel="stylesheet" href="styles/style.css">
@@ -528,6 +528,12 @@
     <footer>
         <p tabindex="0">Website made with <i class="fas fa-heart" title="love"></i> by Sam Legros in&nbsp;2018</p>
         <a href="https://www.w3.org/WAI/WCAG2AA-Conformance" target="_blank" rel="noopener" title="Explanation of WCAG 2.0 Level Double-A Conformance"><img height="32" width="88" src="https://www.w3.org/WAI/wcag2AA-blue" alt="Level Double-A conformance, W3C WAI Web Content Accessibility Guidelines 2.0"></a>
+        <!-- WCAG 2.0 Conformance Claim
+        Date: 2018-10-30
+        Guidelines title, version and URI: "Web Content Accessibility Guidelines 2.0 at http://www.w3.org/TR/2008/REC-WCAG20-20081211/
+        Conformance level: Level AA
+        Description of web page: The single web page of Sam Legros's web development portfolio. The page include sections relating to Sam's short biography, technology skills, project examples, and online links.
+        Web content technologies used: Bootstrap CSS 4.1.3, Bootstrap JS 4.13, Devicon CSS, HTML5, CSS3, Google Analytics JS, Google Font: Montserrat, JavaScript, jQuery 3.3.1 slim, Popper.js 1.14.3, smooth-scroll 14.2.1, typed.js 2.0.9, WCAG 2.0 Conformance -->
     </footer>
     <a tabindex="0" data-scroll href="#section-home" title="Navigate back to top of page"><button tabindex="-1" class="btn" id="back-to-top-button" title="Navigate back to top of page"><i class="fas fa-arrow-up" title="up arrow icon"></i></button></a>
     <!-- cdn jQuery 3.3.1 slim -->
